test: .visually-hidden display: none; hopefully fixing contrast errors :(

--- a/assets/bootstrap/bootstrap.css
+++ b/assets/bootstrap/bootstrap.css
@@ -6981,6 +6981,7 @@ fieldset:disabled .btn {
   clip: rect(0, 0, 0, 0) !important;
   white-space: nowrap !important;
   border: 0 !important;
+  display: none;
 }
 
 .stretched-link::after {
