--- a/assets/bootstrap/bootstrap_clean.css
+++ b/assets/bootstrap/bootstrap_clean.css
@@ -846,6 +846,7 @@ textarea {
   clip: rect(0, 0, 0, 0) !important;
   white-space: nowrap !important;
   border: 0 !important;
+  display: none;
 }
 
 .d-block {
